<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <TextView
        android:id="@+id/titleText"
        style="@style/headingFontBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/textInput"
        style="@style/listItem"
        android:background="@color/lightgrey"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="@string/max_input_limit_normal"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_- "
        android:inputType="text"
        android:layout_height="@dimen/dark_edit_text_height"
        android:paddingLeft="@dimen/dark_editText_left_padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="right">
        <TextView
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/white"
            android:layout_width="@dimen/order_oval_btn_width"
            android:layout_height="@dimen/order_oval_btn_height" />
        <Button
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:layout_marginLeft="10dp"
            android:background="@drawable/orange_rect_btn"
            android:layout_width="@dimen/order_oval_btn_width"
            android:layout_height="@dimen/order_oval_btn_height" />
    </LinearLayout>
</LinearLayout>