<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.cts.cheetah.view.login.LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="horizontal"
    android:weightSum="1">
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".15"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="0dp"
        android:layout_weight=".7"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/schoolsoft_logo"
            android:paddingBottom="55dp"/>
        <EditText
            android:id="@+id/email"
            android:background="@color/white"
            android:textColor="@color/lightgrey"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/user_icon"
            android:textSize="@dimen/normal_text_size"
            android:drawablePadding="14dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/password"
            android:background="@color/white"
            android:textColor="@color/lightgrey"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="14dp"
            android:textSize="@dimen/normal_text_size"
            android:maxLines="1"/>

        <Button
            android:id="@+id/loginButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/sub_heading_text_size"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/darkgrey"
            fontPath="fonts/Oswald-Bold.ttf"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_marginTop="20dp"
            android:layout_gravity="right|center_vertical"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />

    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".15"/>
    <!--<ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />-->
</LinearLayout>
    <TextView
        android:id="@+id/versionNo"
        android:text="Ver 1.0"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:textSize="14dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
